5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4376/executions/1721_3039.log
== TEST (2019-05-02 19:04:04) 
-- CODE:
print("RAFAEL E GAY")
-- OUTPUT:
RAFAEL E GAY
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:04:10) 
-- CODE:
print("RAFAEL E GAY")
-- OUTPUT:
RAFAEL E GAY
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:04:47) 
-- CODE:
input(x="tamo fudido")
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(x="tamo fudido")
TypeError: input() takes no keyword arguments
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:04:56) 
-- CODE:
input(x="tamo fudido"
	  ;
print(x)
-- ERROR:
File "XXXX", line 2
    ;
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:05:16) 
-- CODE:
input(x="tamo fudido:")
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(x="tamo fudido:")
TypeError: input() takes no keyword arguments
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:12:47) 
-- CODE:
input(x="tamo fudido:")
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(x="tamo fudido:")
TypeError: input() takes no keyword arguments
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
